editing emoji libs

--- a/emoji-libs-port-temp.html
+++ b/emoji-libs-port-temp.html
@@ -156,11 +156,18 @@
 
 <div class= "allRecCircle">
   <div class="recCircle">
-  <p class="circleRecText"><b>The Emoji Bible</b><br>
-Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings with emojis, and things you have always wanted to say in emojis</br></p>
+  <p class="circleRecTitle">The Emoji Bible</p>
+  <p class="circleRecText">
+    Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings with emojis, and things you have always wanted to say in emojis</p>
   </div>
-  <div class="recCircle"><p class="circleRecText"><b>Idiom Translator</b><br>Translates English Idioms into Spanish using Google translate API. Also has animated cat that slides in after each idiom translation &amp says &#34;Ole&#34;</br></p></div>
-  <div class="recCircle"><p class="circleRecText"><b>Travel Pics &amp Music</b><br> Shows you travel pics from anywhere in the world with accompanying local music. Uses Instagram tags and  Spotify and Instagram APIs</br></p></div>
+  <div class="recCircle">
+  <p class="circleRecTitle">Idiom Translator</p>
+    <p class="circleRecText">Translates English Idioms into Spanish using Google translate API. Also has animated cat that slides in after each idiom translation &amp says &#34;Ole&#34;</p>
+  </div>
+  <div class="recCircle">
+      <p class="circleRecTitle">Travel Pics &amp Music</p>
+    <p class="circleRecText">Shows you travel pics from anywhere in the world with accompanying local music. Uses Instagram tags and  Spotify and Instagram APIs</p>
+  </div>
 </div>
     <div><p class="statement emojiPink">Vetting ideas</p></div>
 
@@ -172,7 +179,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
           <div class="emojiText"><p><b>Concept user research</b><p>
             <p class= "emojiSubText">- Tested my top 3 ideas with 5+ users, ages 30-70
             </p>
-            <p class= "emojiSubText">- The overwhelming favorite for all users preferred was the Emoji idea
+            <p class= "emojiSubText">- Overwhelming favorite, The Emoji Bible
             </p>
           </div>
         </div>
@@ -181,20 +188,18 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
           <div class="emojiIdeaDiv emojiIdeaDivEngineer">
             <img class="emojiIdeaImg emojiIdeaImgEngineer" alt="Two Crossed Light Sabers" src="myimages/emoji/strategy/emoji-engineer.png">
           </div>
-          <div class="emojiText"><p><b>View ideas with engineers</b><p>
+          <div class="emojiText"><p><b>Reviewed ideas with engineers</b><p>
             <p class= "emojiSubText">
               - Discouraged me from using certain APIs, like Yelp
             </p>
-            <p class= "emojiSubText">- Not excited about the concept of the travel site
+            <p class= "emojiSubText">- Not excited about the travel site concept
             </p>
-            <p class= "emojiSubText">- Liked the idea of the idiom translator
+            <p class= "emojiSubText">- Liked the idiom translator
             </p>
-            <p class= "emojiSubText">- Thought most of my ideas were viable
-            </p>
-            <p class= "emojiSubText">- But just couldn &#39;t get away from the idea of the Emoji site
+            <p class= "emojiSubText">- Thought all my ideas were technologically viable
             </p>
 
-            <p class= "emojiSubText"><b>- &#34;Emojis are just cool. You can&#39;t beat emojis.&#34;</b>
+            <p class= "emojiSubText">- However... <b>&#34;Emojis are just cool. You can&#39;t beat emojis!&#34;</b>
             </p>
           </div>
         </div>
@@ -206,26 +211,26 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
           <div class="emojiText"><p><b>Competitor sites not too compelling</b><p>
             <p class= "emojiSubText">
-            - At the time, there were very few sites available for anything to do with understanding the meaning of emojis
+            - Few sites dealt with understanding the meaning of emojis
             </p>
-            <p class= "emojiSubText">- There are still are no sites for mad-libs with emojis
+            <p class= "emojiSubText">- No sites offered Mad Libs with emojis
             </p>
-            <p class= "emojiSubText">- Quality, design, and functionality of the emoji-related sites available were poor
+            <p class= "emojiSubText">- Quality, design, and functionality of these sites was poor
             </p>
           </div>
         </div>
 
     </div>
 
+
     <div><p class="statement emojiBlue">Think big, start small</p></div>
     <div class="thinkBigDiv">
-      <p class="thinkBigP">Due to demand, chose Emoji Bible, but did I <b>bite off more code than I could chew?</b> Our TAs said to cut back a bit.
+      <p class="thinkBigP1">I chose the Emoji Bible, but did I <b>bite off more code than I could chew?</b> Our TAs said to cut back.
     </div>
 
-<div class="bibAndLib">
-    <img class="bibAndLibImg" alt="Emoji Bible and Emoji Libs Screen shot" src="myimages/emoji/strategy/emoji-bib-lib.png">
-</div>
-
+    <div class="bibAndLib">
+        <img class="bibAndLibImg" alt="Emoji Bible and Emoji Libs Screen shot" src="myimages/emoji/strategy/emoji-bib-lib.png">
+    </div>
 
 <!-- <div class="">
 <p class="statement emojiPink">Emoji Bible</p>
@@ -274,7 +279,11 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
 <div><p class="statement emojiPink">Where to start: the plan</p></div>
 
-<div class="problem">
+<div class="planImgDiv">
+    <img class="planImg" alt="Emoji Bible and Emoji Libs Screen shot" src="myimages/emoji/strategy/the-plan.png">
+</div>
+
+<!-- <div class="problem">
     <div class="bullet">
       <div class="decCircle emojiBlueBack"><p class="decNumber">1</p></div>
       <div class="problemText">
@@ -316,12 +325,15 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
     </div>
   </div>
 
-</div>
+</div> -->
+
+<!--
+They say code is akin to language. I speak 2.25 languages andhave taught language. I would say that analogy holds up, to a point. Having no prior coding experience, with this class what was for sure was that I was learning a new paradigm - a new way to way to think, work, and communicate with my computer. -->
 
 <div class="processSectionTitle" id="researchSection">Discovery</div>
 <div class="thinkBigDiv">
   <p class="thinkBigP">
-    They say code is akin to language. I speak 2.25 languages andhave taught language. I would say that analogy holds up, to a point. Having no prior coding experience, with this class what was for sure was that I was learning a new paradigm - a new way to way to think, work, and communicate with my computer.
+    They say code is akin to language. I speak 2.25 languages, taught language, and believe this analogy holds up, to a point. Having no coding experience prior to this class, I was learning a new language: a new way to way to think, work, and communicate with my computer.
   </p>
 </div>
 
@@ -329,7 +341,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
 <div class="thinkBigDiv">
   <p class="thinkBigP">
-  When I first began learning about HTML I would get this picture in my mind of Tupperware. I saw the &#34;divs&#34; as the containers of the content (photos, text, etc.), the space around the containers is the margin, and the space around the food/content inside these containers is the padding. I also like the metaphor of HTML as a skeleton that you attach content too, so essentially HTML is a skeleton made of Tupperware.
+  When I started learning HTML I would get this picture in my mind of Tupperware. I saw the &#34;divs&#34; as the containers of the content (photos, text, etc.), the space around the containers as the margin, and the space around the food/content inside these containers as the padding. I also like the metaphor of HTML as a skeleton that you attach content too, so to me HTML is a skeleton made of Tupperware.
   </p>
 </div>
 
@@ -339,7 +351,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
 <div class="thinkBigDiv">
   <p class="thinkBigP">
-    My front-end development teacher, Avand, had this bad habit of saying: &#34;that&#39;s easy.&#34; And like that annoying Staples &#34;easy button&#34; him saying it didn&#39;t actually make it so. For my final project I was so focused on making it work I left making it look good until the end. Then Avand said: &#34;you can&#39;t save CSS to the end. CSS is hard!&#34; This for me was a huge victory as I had finally gotten Avand to admit that something was hard. But, all this to say, that <b>nothing in code can ever be taken for granted as &#34;easy.&#34;</b> Sometimes even the most basic things can trip you up, causing you to loose huge chunks of time.
+    My front-end development teacher, Avand, had this bad habit of saying: &#34;that&#39;s easy.&#34; And like that annoying Staples &#34;easy button&#34;, him saying it didn&#39;t actually make it so. For my final project I was so focused on &#34;making it work&#34; leaving CSS until the end. Avand said: &#34;you can&#39;t save CSS to the end. CSS is hard!&#34; This was a huge victory: Avand admited that something in code was hard! The truth is <b>nothing in code can ever be taken for granted as &#34;easy.&#34;</b> Sometimes even the most basic things can trip you up.
   </p>
 </div>
 
@@ -353,7 +365,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
   </div>
 
   <div class="emojiReseachText">
-    <p><b>CSS is much more than a pretty face.</b> CSS does so much more than just add color and styling. Many people prefer even CSS over JavaScript for animations.</p>
+    <p><b>CSS is much more than a pretty face.</b> It does much more than color and styling. For animations, many people even prefer CSS over JavaScript.</p>
   </div>
 </div>
 
@@ -363,7 +375,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
   </div>
 
   <div class="emojiReseachText">
-    <p><b>In CSS, he who speaks last, speaks loudest.</b> This can be a blessing and a curse. A blessing in that you can easily overwrite things by just changing the order. The curse is that sometimes you have multiple classes and styles (especially on main elements: table, etc.) that can screw you up without you knowing why. </p>
+    <p><b>In CSS, he who speaks last, speaks loudest.</b> This is a blessing and a curse. A blessing in that you can easily overwrite things by changing the order. A curse as multiple classes (especially on elements: table, etc.) can cause to to accidently overwrite previous code. </p>
   </div>
 </div>
 
@@ -373,7 +385,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
   </div>
 
   <div class="emojiReseachText">
-    <p><b>CSS may never give you why or where.</b> With some languages, like JavaScript will tell you exactly where the error is and maybe even a bit about why its not working. But with CSS you are mostly on your own. Good luck.
+    <p><b>CSS may never give you why or where.</b> Some languages, like JavaScript will tell you exactly where the error is and maybe even a bit about why it&#39;s not working. But with CSS you are mostly on your own. Good luck.
  </p>
   </div>
 </div>
@@ -384,7 +396,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
   </div>
 
   <div class="emojiReseachText">
-    <p><b>Time, time, time is not on your side, no it&#39;s not.</b> Some of the &#34;easiest&#34; things in CSS can take hours to fix, even for seasoned developers.
+    <p><b>Time, time, time is not on your side, no it&#39;s not.</b> Some of the seamingly &#34;easiest&#34; things in CSS can take hours, even for seasoned developers.
     </p>
   </div>
 </div>
@@ -393,7 +405,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
 
 <div class="thinkBigDiv">
   <p class="thinkBigP">
-    <b>And what&#39;s even worse, the analogies.</b> Somehow visualizing variables as a &#34;bucket&#34; and functions as a &#34;sausage factory&#34; - is supposed to help you to understand inherently difficult concepts. It doesn&#39;t.
+    <b>And what&#39;s even worse: the analogies.</b> Somehow visualizing variables as a &#34;bucket&#34; and functions as a &#34;sausage factory&#34; - is supposed to help you to understand inherently difficult concepts. It doesn&#39;t.
   </p>
 </div>
 
@@ -418,7 +430,7 @@ Learn how to use emojis in 3 different ways: emoji-libs,  express your feelings 
   </div>
 
   <div class="emojiReseachText">
-    <p><b>Gives you a clue about the where if not also the why (sort of).</b> JavaScript tells you the exact place where the error starts, the actual line. It also gives you a bit of information about what caused the error although it&#39;s usually in computer speak like: something is &#34;null,&#34; &#34;undefined is not a function,&#34; or &#34;unexpected token ILLEGAL&#34; - am I going to coding jail?
+    <p><b>Gives you a clue about the where if not also the why (sort of).</b> JavaScript tells you the exact line where the error starts. It also gives you information about what caused the error, although usually in computer speak: &#34;unexpected token ILLEGAL&#34; - am I going to coding jail?
  </p>
   </div>
 </div>
