Editing and adding to emoji libs

--- a/tier5.html
+++ b/tier5.html
@@ -318,12 +318,12 @@
     </table>
   </div>
 </div>
-      <div><p class="statement statmentOrange">Opportunities to improve on the competition.</p></div>
+      <div><p class="statement statmentOrange">Opportunities to improve on the competition</p></div>
       <div class="features">
       <img class="featureCompImg" alt="feature Prioritization Chart" src="myimages/tier5/strategy/feature-competition.png">
       </div>
 
-      <div><p class="statement">Recommendations.</p></div>
+      <div><p class="statement">Recommendations</p></div>
 
         <div class="circleRecWrapper">
 
@@ -793,7 +793,7 @@
   </div>
 </div>
 
-<div><p class="statement">User testing with paper prototypes.</p></div>
+<div><p class="statement">User testing with paper prototypes</p></div>
 
 <!-- top 3 paper proptotypes -->
   <div class="paperPrototypes">
