--- a/emoji-libs-port-temp.html
+++ b/emoji-libs-port-temp.html
@@ -138,10 +138,7 @@
                     <img class="featureIcon" alt="Hub icon" src="myimages/emoji/intro/bullet-pink.png">
                     <p class="experienceSentence2">Present something you don&#39;t truly understand</p>
                   </div>
-                  <!-- <div class="iconSentence">
-                    <img class="featureIcon" alt="Hub icon" src="myimages/webmd/synthesis/bullet-pink.png">
-                    <p class="experienceSentence2">Real-time alerts due to changes in your physical condition</p>
-                  </div> -->
+
           </div>
                 <!-- features -->
       </div>
@@ -175,9 +172,10 @@
     <div class="problem">
         <div class="bullet">
           <div class="emojiIdeaDiv">
-            <img class="emojiIdeaImgUsers" alt="3 people emojis" src="myimages/emoji/strategy/users.png">
+            <img class="ideaImg emojiIdeaImgUsers" alt="3 people emojis" src="myimages/emoji/strategy/users.png">
           </div>
-          <div class="emojiText"><p><b>Concept user research</b><p>
+          <div class="emojiText">
+            <p><b>Concept user research</b><p>
             <p class= "emojiSubText">- Tested my top 3 ideas with 5+ users, ages 30-70
             </p>
             <p class= "emojiSubText">- Overwhelming favorite, The Emoji Bible
@@ -187,7 +185,7 @@
 
         <div class="bullet bulletEngineer ">
           <div class="emojiIdeaDiv emojiIdeaDivEngineer">
-            <img class="emojiIdeaImg emojiIdeaImgEngineer" alt="Two Crossed Light Sabers" src="myimages/emoji/strategy/emoji-engineer.png">
+            <img class="emojiIdeaImg ideaImg emojiIdeaImgEngineer" alt="Engineer Emoji" src="myimages/emoji/strategy/emoji-engineer.png">
           </div>
           <div class="emojiText"><p><b>Reviewed ideas with engineers</b><p>
             <p class= "emojiSubText">
@@ -207,7 +205,7 @@
 
         <div class="bullet">
           <div class="emojiIdeaDiv">
-            <img class="emojiIdeaImgComp" alt="Two Crossed Light Sabers" src="myimages/emoji/strategy/comp.png">
+            <img class="emojiIdeaImgComp ideaImg" alt="Screen Shots" src="myimages/emoji/strategy/comp.png">
           </div>
 
           <div class="emojiText"><p><b>Competitor sites not too compelling</b><p>
@@ -223,7 +221,6 @@
 
     </div>
 
-
     <div><p class="statement emojiBlue">Think big, start small</p></div>
     <div class="thinkBigDiv">
       <p class="thinkBigP1">I chose the Emoji Bible, but did I <b>bite off more code than I could chew?</b> Our TAs said to cut back.
@@ -233,103 +230,11 @@
         <img class="bibAndLibImg" alt="Emoji Bible and Emoji Libs Screen shot" src="myimages/emoji/strategy/emoji-bib-lib.png">
     </div>
 
-<!-- <div class="">
-<p class="statement emojiPink">Emoji Bible</p>
-
-      <div class="compThreatLogosText">
-        <p class="compThreatLogoSubTitle">Offered essentially three multi-level, fully-functional websites:</p>
-        <p class="compThreatLogoText">- Emoji-Libs/translator (a Mad Libs for emojis)</p>
-        <p class="compThreatLogoText">- Express your feelings with Emojis</p>
-        <p class="compThreatLogoText">- And things you have always wanted to say in emojis (funny expressions in emojis)</p>
-      </div>
-
-      <div class="compThreatLogos">
-          <img class="compThreatLogosImg" alt="Emoji Bible Screen shot" src="myimages/emoji/strategy/emoji-bible.png">
-  </div>
-
-<div class="arrowDiv">
-  <div>
-    <p class="arrowText">
-      Scaled down
-    </p>
-  </div>
-  <div class="arrowImgDiv">
-    <img class="arrowImg" alt="Emoji Bible Screen shot" src="myimages/emoji/strategy/arrow-down-pink.png">
-  </div>
-  <div>
-    <p class="arrowText arrowTextABit">
-      a bit
-    </p>
-  </div>
-</div>
-
-  <div class="">
-    <p class="statement emojiBlue">Emoji-Libs</p>
-        <div class="compThreatLogosText compThreatLogosTextEmojiLibs">
-          <p class="compThreatLogoSubTitle">Offered one fully-functional website with three stories:</p>
-          <p class="compThreatLogoText">- Dynamic site, uses multiple types of JavaScript functions</p>
-          <p class="compThreatLogoText">- JavaScript and CSS animations </p>
-        </div>
-
-        <div class="compThreatLogos">
-          <img class="compThreatLogosImg" alt="Emoji Bible Screen shot" src="myimages/emoji/strategy/emoji-libs.png">
-        </div>
-
-    </div>
-</div> -->
-
 <div><p class="statement emojiPink">Where to start: the plan</p></div>
 
 <div class="planImgDiv">
     <img class="planImg" alt="Emoji Bible and Emoji Libs Screen shot" src="myimages/emoji/strategy/the-plan.png">
 </div>
-
-<!-- <div class="problem">
-    <div class="bullet">
-      <div class="decCircle emojiBlueBack"><p class="decNumber">1</p></div>
-      <div class="problemText">
-        <p><b>Content</b><p>
-        <p class= "problemSubText">You don't know what to design if you don't have any content. I started with the draft of the text for the 3 stories. I decided on a &#34;cell phone&#34; theme given that&#39;s is where emojis are most often used. As I wrote them, the stories began to build on each other and flow one into the next.</div>
-    </div>
-    <div class="bullet">
-      <div class="decCircle emojiBlueBack"><p class="decNumber">2</p></div>
-      <div class= "problemText"><p><b>Design on paper first</b></p>
-      <p class= "problemSubText">Even for designers, when they begin to code there is an impetus to forget everything you have learned and just get in there and code already. But this is when you need to design processes more than ever. Lack of design up front means much more work on the backend.</p>
-    <p class= "problemSubText"></p></div>
-    </div>
-
-    <div class="bullet">
-      <div class="decCircle emojiBlueBack"><p class="decNumber">3</p></div>
-      <div class= "problemText"><p><b>Design in digital</b></p>
-      <p class= "problemSubText">I can almost hear that little voice in my head, I don&#39;t have to map it all out on Sketch/Illustrator? Paper sketch is enough right? No. Gotta do the whole design process.</p>
-    </div>
-  </div>
-
-    <div class="bullet">
-      <div class="decCircle emojiBlueBack"><p class="decNumber">4</p></div>
-      <div class= "problemText"><p><b>Research</b></p>
-      <p class= "problemSubText">This is not necessarily in the right order because you really have to research throughout the whole process. When you are coming up with the concept. When you create the content. When you create the designs. After you code. Asking users and other designers opinions and researching usability is a constant, iterative process.</p>
-    </div>
-  </div>
-
-    <div class="bullet">
-      <div class="decCircle emojiBlueBack"><p class="decNumber">5</p></div>
-      <div class= "problemText"><p><b>Code monkey</b></p>
-      <p class= "problemSubText">I very proudly call myself a code monkey. I truly believe to code is to create: art, science, and intellect all wrapped into one. But sometimes it is just brute strength and hours of time code monkey-ing just to get it done.</p>
-    </div>
-  </div>
-
-    <div class="bullet">
-      <div class="decCircle emojiBlueBack"><p class="decNumber">6</p></div>
-      <div class= "problemText"><p><b>Redesign in code</b></p>
-      <p class= "problemSubText">Being the content creator, designer, and coder I was in a unique position. I could modify content so it would fit better on the screeen and even use pictures instead of code if it I couldn&#39;t get it the formatting just right. But also found that I could also make design improvements with code. Sometimes an unexpected coding outcome would actually mean better design.</p>
-    </div>
-  </div>
-
-</div> -->
-
-<!--
-They say code is akin to language. I speak 2.25 languages andhave taught language. I would say that analogy holds up, to a point. Having no prior coding experience, with this class what was for sure was that I was learning a new paradigm - a new way to way to think, work, and communicate with my computer. -->
 
 <div class="processSectionTitle" id="researchSection">Discovery</div>
 <div class="thinkBigDiv">
@@ -357,8 +262,6 @@ They say code is akin to language. I speak 2.25 languages andhave taught languag
 </div>
 
 <img class="easyButton" alt="Easy Button" src="myimages/emoji/research/easy-button.png">
-
-<!-- <p class="emojiResearchBullet">Key items to note about css:</p> -->
 
 <div class="emojiResearchBulletDiv">
   <div class="emojiResearchDiv">
@@ -475,7 +378,6 @@ They say code is akin to language. I speak 2.25 languages andhave taught languag
   <div class="emojiReseachText">
     <p><b>Line 1: function chooseNouns(nounEvent){</b></p>
     <p>This is the function that allows you to choose a noun emoji from the list of options in the noun table.
-      <!-- The &#34;nounEvent&#34; is the input passed in the function (aka sausage factory). -->
     </p>
   </div>
 </div>
@@ -558,29 +460,18 @@ They say code is akin to language. I speak 2.25 languages andhave taught languag
   </div>
 </div>
 
-
-<!-- <div class="thinkBigDiv">
-  <p class="thinkBigP phew">
-    <b>Phew. I am exhausted. And that was just one tiny piece of the code that makes up Emoji-Libs</b>
-  </p>
-</div> -->
-
-
 <div class="processSectionTitle" id="synthesisSection">Synthesis</div>
 
 <img class="lessonsLearned" alt="Lessons Learned" src="myimages/emoji/synthesis/lessons.png">
 
 <div class="swot">
 
-
   <div class="topSwot">
-    <!-- number 1 -->
     <div class="strengthWeak  swotRec">
       <p class="swotTitle">Break Things</p>
       <p>- <b>People don&#39;t want to change code for fear of breaking it</b>, especially JavaScript</p>
       <p>- <b>But the only way to learn is to change things, break things, and then fix them.</b> (Commits on GitHub so you can &#34;undo&#34; are great too!)</p>
     </div>
-    <!-- number 2 --></b>
 
     <div class="oppThreats swotRec">
       <p class="swotTitle">Always do the Process</p>
@@ -601,8 +492,6 @@ They say code is akin to language. I speak 2.25 languages andhave taught languag
       <p>- Also, the lean UX implied by MVP may also result in a crisper design.</p>
     </div>
 
-
-
 </div>
 
   <div class="bottomSwot">
@@ -612,7 +501,6 @@ They say code is akin to language. I speak 2.25 languages andhave taught languag
       <p>- I learned a lot about what is easy/hard to do in code, but even veteran devs have problems like:
       <p>- The &#34;easy CSS&#34; issue that took 3 hrs to fix.<p>
       <p>- The problem I didn&#39;t know I had.</p>
-      <!-- : &#34;hey your website looks like weird on my Android.&#34; -->
       <p>- Just gonna finish one more thing&#8230; is it 4am?</p>
     </div>
 
@@ -641,72 +529,6 @@ They say code is akin to language. I speak 2.25 languages andhave taught languag
   </div>
 
 </div>
-
-<!-- <div class="swot">
-
-  <div class="topSwot">
-    <div class="strengthWeak swotRec">
-      <p class="swotTitle">Responsive web</p>
-      <p>- Bootstrap is helpful with nav, footer, and scroll tables but it requires a lot of work on visuals.</p>
-      <p>- <b>Bootstrap&#39;s grid can help</b> with layout, but <b>you often need to insert media queries to make things work.</b> </p>
-      <p>- Using percentages and global margins will help to make responsive easier.</p>
-    </div>
-    <div class="strengthWeak  swotRec">
-      <p class="swotTitle">Break things</p>
-      <p>- <b>People often do not want to change their code for fear of breaking it</b>, especially when JavaScript brings your whole page to a screeching halt.</p>
-      <p>- <b>But the only way to learn is to change things</b>, break things, and then learn to fix them. (Making commits on GitHub so you can “undo” is a great practice too).</p>
-    </div>
-  </div>
-
-<div class="topSwot">
-  <div class="strengthWeak swotRec">
-    <p class="swotTitle">Code is Creative</p>
-    <p>- Many people think that code is just about being a “monkey,” rote implementation of someone else’s creativity.</p>
-    <p>- For this project I was in a unique position: wrote content, designed, and coded. And <b>I found that code was very creative and even inspired better design.</b> </p>
-  </div>
-
-  <div class="strengthWeak swotRec">
-    <p class="swotTitle">MVP is good</p>
-    <p>- <b>Focus on completing a MVP first,</b> get it done.</p>
-    <p>- <b>You may find that the lean UX implied by MVP may also result in better, crisper design.</b></p>
-  </div>
-</div>
-
-  <div class="bottomSwot">
-    <div class="oppThreats swotRec">
-      <p class="swotTitle">Make it work before you Make it pretty</p>
-      <p>- This phrase should probably be tattooed on the arm of any web developer or designer.</p>
-      <p>- While also true for design, in code it&#39;s especially true as <b>the penalty for making it “pretty” too soon can be devastating, many hours of wasted time that might completely be lost.</b><p>
-    </div>
-    <div class="oppThreats swotRec">
-      <p class="swotTitle">Always do the process</p>
-      <p>- This project was for a front-end web development class. I didn’t need to look at the strategic implications of this project, sketch designs, create digital wireframes, user test - any of that.  </p>
-      <p>- But <b>for me, doing the design process is necessary for any kind of decision making.</b>
-      </p>
-    </div>
-  </div>
-  <div class="bottomSwot">
-    <div class="oppThreats  swotRec swotRecLong">
-      <p class="swotTitle">Timing is tough</p>
-      <p>- How long will that take? I can just see asking this questions as a designer/portfolio manager. And now I know the answer may not be that easy. I have learned a lot about what is hard and what is easy to do in code, but even seasoned developers are hit with unexpected issues that can drastically effect time to completion
-      <p>Some that happened to me are:</p>
-      <p>+ The “easy CSS” problem that took 3 hours to fix.<p>
-      <p>+ The problem I didn’t know I had. Hey why is your website look like X, Y, Z on my Android…</p>
-      <p>+ I am just going to finish one more thing… is it 4am?</p>
-    </div>
-
-    <div class="oppThreats swotRec swotRecLong">
-      <p class="swotTitle">Scope creep</p>
-      <p>- <b>Scope creep is one of the toughest things to manage in code.</b></p>
-      <p>- I just need to do one more thing…</p>
-      <p>- Wouldn't it be cool if…</p>
-      <p>- STOP! Define the scope and stick to it. Don’t let a small project become the Taj Mahal.</p>
-      <p>- What helps me is to <b>fall back on the concept of MVP.</b> What is the minimum I need to do to get this out? The rest goes on your Trello to do list. And it will be a long list.</p>
-      </p>
-    </div>
-  </div>
-
-</div> -->
 
 <div><p class="statement emojiPink">The problem &amp the Emoji-Libs solution</p></div>
 
@@ -884,7 +706,7 @@ They say code is akin to language. I speak 2.25 languages andhave taught languag
 
     <img class="screenShot" alt="Screen Shot" src="myimages/emoji/build/translate.png">
 
-  <div><p class="  screenShotTitle2 emojiPink"> Can't wait to check it out?</p></div>
+  <div><p class="  screenShotTitle2 charcol"> Can't wait to check it out?</p></div>
 
   <div>
     <button  type="button" onclick="location.href='../FEWD37/final-project/index.html';">Emoji-Libs LIVE</button>
