--- a/emoji-libs-port.html
+++ b/emoji-libs-port.html
@@ -67,14 +67,14 @@
         <div class="introBoxes row">
           <div class="introBox col-xs-6">
             <p class="boxTitle emojiBlue">My Challenge</p>
-            <p class="boxText heavyText">Emoji-Libs was my final project for my front-end web development class. It&#39;s part of my design portfolio because it was unique opportunity to create content, design, and actually bring a site to life with code. Of all the projects in my portfolio, this did the most to increase my understanding of the big picture, all the roles within tech and how design can best work within them.
+            <p class="boxText heavyText">Emoji-Libs was my final project for my front-end web development class. It&#39;s part of my design portfolio because it was a unique opportunity to create content, design, and actually bring a site to life with code. Of all the projects in my portfolio, this did the most to increase my understanding of the big picture, all the roles within tech, and how design can best work within them.
           </p>
           </div>
 
           <div class="introBox col-xs-6 col-md-offset-1 ">
             <p class="boxTitle emojiBlue">My Role</p>
             <p class="boxText heavyText">
-              This project was 100% my work product, including concept creation, content, design, and code. Throughout the process our TAs were available to help and 5+ users also helped with feedback for concept and design.
+              This project was 100% my work product, including concept creation, content, design, and code. Throughout the process, our TAs were available to help and 5+ users provided feedback for concept and design.
           </p>
           </div>
         </div>
