Typo emoji libs

--- a/emoji-libs-port.html
+++ b/emoji-libs-port.html
@@ -696,7 +696,7 @@
   <div><p class="screenShotTitle charcol"> Bold, all caps, &amp underlined areas make it clear where users should click in the story </p></div>
     <img class="screenShot screenShotText" alt="Screen Shot" src="myimages/emoji/build/text.png">
 
-    <div><p class=" screenShotTitle charcol"> Easy-to-use-pop-up table allows user to quickly choose correct emoji</p></div>
+    <div><p class=" screenShotTitle charcol"> Easy-to-use pop-up table allows user to quickly choose correct emoji</p></div>
 
     <img class="screenShot screenShotTable" alt="Screen Shot" src="myimages/emoji/build/table.png">
 
@@ -726,7 +726,7 @@
       <div class="bullet">
         <div class="decCircle emojiPinkBack"><p class="decNumber">3</p></div>
         <div class= "problemText"><p><b>There is nothing like seeing your creation come to life</b></p>
-        <p class= "problemSubText">Even the most beautiful design is still just flat. It&#39;s not dynamic. It doesn&#39;t having any functionality. When you build a site, with you own two hands and see it functioning it&#39;s an amazing feeling. I have been a writer, artist, and filmmaker and believe that, like those mediums, code is truly an art.</p>
+        <p class= "problemSubText">Even the most beautiful design is still just flat. It&#39;s not dynamic. It doesn&#39;t have any functionality. When you build a site with your own two hands and see it functioning, it&#39;s an amazing feeling. I have been a writer, artist, and filmmaker and believe that, like those mediums, code is truly an art.</p>
       </div>
     </div>
 
