Fixed typos in emoji libs and tier5

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
       <p class="sectionTitleJ">Jessica Davies</p>
 
       <p id="jobTitle">
-        Strategist | UX Designer | FE Developer | Heathcare SME
+        Strategist | UX Designer | FE Developer | Healthcare SME
       </p>
       <p id="jobLocation">San Francisco &amp; New York</p>
 
@@ -107,28 +107,28 @@
             <div class="approachSections">
               <div class="approachCircle twoWordCircle"><p>Business Strategy</p></div>
               <div class="approachText">
-                <div class="heavyText"><p>As a designer, I always start with the business first. The design mantra is if the users aren&#39;t happy, you don&#39;t have a business. I couldn&#39;t agree more. But it goes both ways. If you don&#39;t have solid business strategy then you won&#39;t be able to sustainably offer any products to your users. <b>I believe I am unique in that I can look at things with a design eye, without ever talking my eye of the end game &#45; making the business profitable.</b></p></div>
+                <div class="heavyText"><p>As a designer, I always start with the business first. The design mantra is &#34;if the users aren&#39;t happy, you don&#39;t have a business.&#34; I couldn&#39;t agree more. But it goes both ways. If you don&#39;t have a solid business strategy, then you won&#39;t be able to sustainably offer any products to your users. <b>I believe I am unique in that I can look at things with a design eye, without ever taking my eye off the end game &#45; making the business profitable.</b></p></div>
               </div>
           </div>
 
             <div class="approachSections">
                 <div class="approachCircle"><p class="oneWordCircle">Ideation</p></div>
                 <div class="approachText">
-                  <div class="approachPointsAbout heavyText"><p>People are highly suggestible and extensive research of a product or its competitors can often lead to a flat &#34;me too&#34; designs. <b>I prefer ideate first with only a very basic knowledge of the product. I believe this results in the most novel designs.</p></b></div>
+                  <div class="approachPointsAbout heavyText"><p>People are highly suggestible, and extensive research of a product or its competitors can often lead to a flat &#34;me too&#34; designs. <b>I prefer to ideate first with only a very basic knowledge of the product. I believe this results in the most novel designs.</p></b></div>
                 </div>
             </div>
 
             <div class="approachSections">
                 <div class="approachCircle"><p class=" oneWordCircle">Research</p></div>
               <div class="approachText ">
-                <div class="approachPointsAbout  heavyText"><p><b>Throughout my career, research has always played an integral part.</b> I enjoy talking to all types of people, hearing about the product from their point of view. Repeated research is the only way to confirm the correct strategic direction.</p></div>
+                <div class="approachPointsAbout  heavyText"><p><b>Throughout my career, research has always played an integral part.</b> I enjoy talking to all types of people, and hearing about the product from their points of view. Repeated research is the only way to confirm the correct strategic direction.</p></div>
               </div>
             </div>
 
             <div class="approachSections">
               <div class="approachCircle approachCircle4"><p class="oneWordCircle">Design</p></div>
               <div class="approachText ">
-                <div class="approachPointsAbout heavyText"><p><b>My approach is to never hold back.</b> Never say it can&#39;t be done, it&#39;s a bad idea, or my least favorite: &#34;but we have always done it this way.&#34; Sketch it all out. Change it. Check viability with engineering. <b>Make a decision. Test. Rinse. Repeat.</b></p></div>
+                <div class="approachPointsAbout heavyText"><p><b>My approach is to never hold back.</b> Never say it can&#39;t be done, it&#39;s a bad idea, or my least favorite, &#34;But we have always done it this way.&#34; Sketch it all out. Change it. Check viability with engineering. <b>Make a decision. Test. Rinse. Repeat.</b></p></div>
               </div>
             </div>
     </div>
@@ -151,7 +151,7 @@
                   <td class="zebra"><img class ="software" alt="Skull and Cross Bones Emoji" src="myimages/about/expert-emoji.png"></td>
                 </tr>
                 <tr>
-                  <td class="method">Design Studio</td>
+                  <td class="method">Design studio</td>
                   <td class="grade">Intermediate</td>
                   <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
                 </tr>
@@ -196,7 +196,7 @@
                   <td class="zebra"><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
                 </tr>
                 <tr>
-                  <td class="method">Market Research</td>
+                  <td class="method">Market research</td>
                   <td class="grade">Expert</td>
                   <td><img class ="software" alt="Skull and Cross Bones Emoji" src="myimages/about/expert-emoji.png"></td>
                 </tr>
@@ -346,7 +346,7 @@
                   <td><img class ="software" alt="Turkey Emoji" src="myimages/about/turkey-emoji.png"></td>
                 </tr>
                 <tr>
-                  <td class="method">Java Script</td>
+                  <td class="method">JavaScript</td>
                   <td class="grade">Intermediate</td>
                   <td><img class ="software" alt="Geek Emoji" src="myimages/about/adjective-smart.png"></td>
                 </tr>
@@ -375,7 +375,7 @@
                             </tr>
 
                             <tr>
-                              <td class="method">Business Development</td>
+                              <td class="method">Business development</td>
                               <td class="grade">Advanced</td>
                               <td><img class ="software" alt="Queen Emoji" src="myimages/about/advanced-emoji.png"></td>
                             </tr>
