--- a/emoji-libs-port.html
+++ b/emoji-libs-port.html
@@ -74,7 +74,7 @@
           <div class="introBox col-xs-6 col-md-offset-1 ">
             <p class="boxTitle emojiBlue">My Role</p>
             <p class="boxText heavyText">
-              This project was 100% my work product, including concept creation, content, design, and code. Throughout the process, our TAs were available to help and 5+ users provided feedback for concept and design.
+              This project was 100% my work product, including concept creation, content, design, and code. Throughout the process our TAs were available to help and 5+ users provided feedback for concept and design.
           </p>
           </div>
         </div>
@@ -257,7 +257,7 @@
 
 <div class="thinkBigDiv">
   <p class="thinkBigP">
-    My front-end development teacher, Avand, had this bad habit of saying, &#34;that&#39;s easy.&#34; And like that annoying Staples &#34;easy button,&#34; him saying it didn&#39;t actually make it so. For my final project, I was so focused on &#34;making it work&#34;, I left CSS until the end. Avand said, &#34;You can&#39;t save CSS to the end. CSS is hard!&#34; This was a huge victory: Avand admited that something in code was hard! The truth is <b>nothing in code can ever be taken for granted as &#34;easy.&#34;</b> Sometimes even the most basic things can trip you up.
+    My front-end development teacher, Avand, had this bad habit of saying, &#34;That&#39;s easy.&#34; And like that annoying Staples &#34;easy button,&#34; him saying it didn&#39;t actually make it so. For my final project, I was so focused on &#34;making it work&#34;, I left CSS until the end. Avand said, &#34;You can&#39;t save CSS to the end. CSS is hard!&#34; This was a huge victory: Avand admited that something in code was hard! The truth is <b>nothing in code can ever be taken for granted as &#34;easy.&#34;</b> Sometimes even the most basic things can trip you up.
   </p>
 </div>
 
@@ -289,7 +289,7 @@
   </div>
 
   <div class="emojiReseachText">
-    <p><b>CSS may never give you &#34;why&#34; or &#34;where.&#34;</b> Some languages, like JavaScript will tell you exactly where the error is and maybe even a bit about why it&#39;s not working. But with CSS you are mostly on your own. Good luck.
+    <p><b>CSS may never give you &#34;why&#34; or &#34;where.&#34;</b> Some languages, like JavaScript, will tell you exactly where the error is and maybe even a bit about why it&#39;s not working. But with CSS you are mostly on your own. Good luck.
  </p>
   </div>
 </div>
@@ -321,7 +321,7 @@
   </div>
 
   <div class="emojiReseachText">
-    <p><b>Everything shuts down.</b> Unlike CSS/HTML when JavaScript is not working every bit of your code just stops working, even parts that have nothing to do with the error. Good times. Good times.
+    <p><b>Everything shuts down.</b> Unlike CSS/HTML, when JavaScript is not working every bit of your code just stops working, even parts that have nothing to do with the error. Good times. Good times.
     </p>
   </div>
 </div>
@@ -411,7 +411,7 @@
 
   <div class="emojiReseachText">
     <p><b>Line 6-14: var clonedImg= document.createElement("img");</b></p>
-    <p>This section of code creates a new emoji image to be placed in the text of the story and assigns it all the necessary attributes: image, classes, the translation text (i.e. pig emoji translates to the word &#34;piggy&#34;).</p>
+    <p>This code creates a new emoji image to be placed in the text of the story and assigns it all the necessary attributes: image, classes, the translation text (i.e. pig emoji translates to the word &#34;piggy&#34;).</p>
   </div>
 </div>
 
@@ -648,7 +648,7 @@
           Know what is easier to do in code and what might take more effort.
         </p>
         <p class= "problemSubText">
-           Understand that anything can happen makes you a better more empathetic partner with developers.
+           Understand that anything can happen makes you a better, more empathetic partner with developers.
         </p>
       </div>
     </div>
@@ -662,7 +662,7 @@
     <div class="bullet">
       <div class="decCircle emojiBlueBack"><p class="decNumber">3</p></div>
       <div class= "problemText"><p><b>Knowledge is power</b></p>
-      <p class= "problemSubText">Sometimes dealing with engineers is like dealing with a mechanic: &#34;don't worry about what's under the hood, little missy.&#34;</p>
+      <p class= "problemSubText">Sometimes dealing with engineers is like dealing with a mechanic: &#34;Don't worry about what's under the hood, little missy.&#34;</p>
       <p class= "problemSubText">When designers know code, they can take back some of that power.</p>
     </div>
   </div>
@@ -681,7 +681,7 @@
 
 <div class="thinkBigDiv">
   <p class="thinkBigP">
-      In addition to some of the general lessons learned about code and design, I also learned some &#34;tricks&#34; that made building my site easier. Keep in mind that some tricks or hacks, like using negative margin to move things up or margin left to center, can be very dangerous especially when it comes to responsive web, and usually more trouble than they are worth. The tricks below are ones that have given me maximum speed/ease with minimum headaches. But with code you know I can&#39;t make any promises. </p>
+      In addition to some of the general lessons learned about code and design, I also learned some &#34;tricks&#34; that made building my site easier. Keep in mind that some tricks or hacks, like using negative margin to move things up or margin left to center, can be very dangerous, especially when it comes to responsive web, and usually more trouble than they are worth. The tricks below are ones that have given me maximum speed/ease with minimum headaches. But with code you know I can&#39;t make any promises. </p>
 </div>
 
 <div><p class="statement emojiPink">Tricks of the trade</p></div>
@@ -739,7 +739,7 @@
   <div class="col-xs-12 col-md-offset-1 col-sm-5 col-md-offset-4 col-md-2 col-lg-offset-4 col-lg-2">
     <!-- col-sm-offset-1 col-sm-6  -->
     <a class="nextportRight" href="tier5.html">
-      <p class="nextPort arrowAndText ">Tier 5</p>
+      <p class="nextPort arrowAndText ">Tier5</p>
       <img class="arrowPort arrowAndText" alt="Connect Icon" src="myimages/arrow-port.png">
     </a>
   </div>
