--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
               <div class= "back light">
                 <div class="projectBack"style="text-align:left">
                   <ul class="titleDown">
-                    <li class="liInline companyTitle darkText">Tier 5</li>
+                    <li class="liInline companyTitle darkText">Tier5</li>
                   </ul>
-                  <p class="projectDes darkText" style="text-align:left">Re-designed all aspects of start-up's outbound web-based sales platform. Increased market opportunity by 3x.</p>
+                  <p class="projectDes darkText" style="text-align:left">Redesigned all aspects of start-up's outbound web-based sales platform. Increased market opportunity by 3x.</p>
                   <button class="darkButton backButton" type="button" onclick="location.href='tier5.html';">see more</button>
                 </div>
               </div>
@@ -134,7 +134,7 @@
               <!-- WILL NEED TO ADD THI BACK -->
               <!-- <li class="liInline"><img id="iconBeauty" class ="icon" alt="Picture of World" src="myimages/home/iphone-logo-light.png"></li> -->
             </ul>
-            <p class="projectDes lightText" style="text-align:left">Created &amp; designed "Epicurious for your face," native app offering recipes for making beauty products right from your fridge.</p>
+            <p class="projectDes lightText" style="text-align:left">Created &amp; designed "Epicurious for Your Face," native app offering recipes for making beauty products right from your fridge.</p>
 
             <button class="lightButton backButton" type="button" onclick="location.href='beauty.html';">see more</button>
 
@@ -156,7 +156,7 @@
                   <!-- WILL NEED TO ADD THI BACK -->
                 <!-- <li class="liInline"><img id="iconBunny" class ="icon" alt="World icon" src="myimages/home/web-logo-dark.png"></li> -->
               </ul>
-              <p class="projectDes darkText" style="text-align:left">Created, designed, &amp; coded a site to help people to learn how to use emojis as my final project in my front-end web development course.</p>
+              <p class="projectDes darkText" style="text-align:left">Created, designed, &amp; coded a site to help people learn how to use emojis as my final project in my front-end web development course.</p>
 
               <button class="darkButton backButton" type="button" onclick="location.href='emoji-libs-port.html';">see more</button>
             </div>
