--- a/tier5.html
+++ b/tier5.html
@@ -9,7 +9,7 @@
     <!-- BOOTSTRAP-Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-    <title>Jessica Davies UX Design Project 1: Tier 5 </title>
+    <title>Jessica Davies UX Design Project 1: Tier5 </title>
     <link  rel="stylesheet" href="all-files.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="nav.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
@@ -62,14 +62,14 @@
             <img class="projectLogoTier" class="pictwo" alt="Tier 5 Octopus Logo" src="myimages/tier5/introduction/tier5-hula-left.png">
           </div>
 
-            <p class="projectTitle">Tier5 Outbound Sales Lead Generating Platform</p>
+            <p class="projectTitle">Tier5 Outbound Sales Lead-Generating Platform</p>
 
         </div>
         <div class="introBoxes row">
           <div class="introBox col-xs-6">
             <!-- <div class="center-block"> -->
             <p class="boxTitle">The Client</p>
-            <p class="boxText heavyText">Tier5, an early stage start-up, engaged us to give their outbound sales-lead generating platform a visual facelift. But after our extensive research we found the Company's UX Design and even part of their business model also needed a rebuild. Our redesign increased their market opportunity by 3x.
+            <p class="boxText heavyText">Tier5, an early stage start-up, engaged us to give their outbound sales lead-generating platform a visual facelift. But after our extensive research we found the company's UX design, and even part of their business model, also needed a rebuild. Our redesign increased their market opportunity by 3x.
           </p>
             <!-- </div> -->
           </div>
@@ -78,7 +78,7 @@
             <!-- col-md-offset-1 -->
               <!-- <div class="center-block"> -->
             <p class="boxTitle">My Role</p>
-            <p class="boxText heavyText">Over a two-week period our very close-knit, two-person team worked collaboratively on every aspect of UX Design process: research, heuristic evaluation, competitive analysis, user interviews, user testing, design, sketching, prototyping, and presenting our work.
+            <p class="boxText heavyText">Over a two-week period, our very close-knit, two-person team worked collaboratively on every aspect of the UX design process: research, heuristic evaluation, competitive analysis, user interviews, user testing, design, sketching, prototyping, and presenting our work.
           </p>
         <!-- </div> -->
       </div>
@@ -109,7 +109,7 @@
             <div class="approachCircle approachCircle1"><p class="approachNumber">1</p></div>
             <div class="approachText">
               <div class="approachPoints"><p>Always Consider the Business Needs &amp Goals</p></div>
-              <div class="approachSubPoints"><p>Start with the business first<br>Increase acquisition and retention</br></p></div>
+              <div class="approachSubPoints"><p>Start with the business first.<br>Increase acquisition and retention.</br></p></div>
             </div>
         </div>
 
@@ -125,8 +125,8 @@
           <div class="approachSections">
               <div class="approachCircle approachCircle3"><p class="approachNumber approachNumber3">3</p></div>
             <div class="approachText">
-              <div class="approachPoints"><p>In-depth Understanding of the User</p></div>
-              <div class="approachSubPoints"><p>Understand how sales people seek and use lead information</p></div>
+              <div class="approachPoints"><p>In-Depth Understanding of the User</p></div>
+              <div class="approachSubPoints"><p>Understand how sales people seek and use lead information.</p></div>
             </div>
           </div>
 
@@ -140,7 +140,7 @@
   </div>
 
       <div class="funnelLogos">
-        <div><p class="statement">Small start-up can't be all things to all people.</p></div>
+        <div><p class="statement">Small start-up can't be all things to all people</p></div>
 
         <!-- LOGO ROW 1 -->
         <div class="logoRow">
